--- a/weeklyplan.html
+++ b/weeklyplan.html
@@ -1,14 +1,19 @@
-<!DOCTYPE HTML>
+ <!DOCTYPE HTML>
 <html>
 <head>
 <title> Weekly Plan </title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="assets/css/main.css" />
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">  
+	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
+
+
 <body class="subpage">
 
-<!-- Header -->
 <header id="header">
 	<div class="inner">
 		<nav id="nav">
@@ -19,15 +24,68 @@
 		<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 	</div>
 </header>
+<table class="table table-striped table-hover" style="margin-top: 50px;">
+        <h3 class="text-center">每周计划表</h3>
+	<thead>
+		<tr>
+                        <th>时间</th>
+			<th>Monday</th>
+			<th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+                        <td>早上</td>
+			<td>Meeting</td>
+			<td>Working</td>
+                        <td>Learning</td>
+                        <td>看10页书</td>
+                        <td>无</td>
+		</tr>
+		<tr>
+                        <td>下午</td>
+			<td>Meeting</td>
+			<td>Working</td>
+                        <td>Learning</td>
+                        <td>看10页书</td>
+                        <td>无</td>
+		</tr>
+		<tr>
+			<td>晚上</td>
+			<td>Meeting</td>
+			<td>Working</td>
+                        <td>Learning</td>
+                        <td>看10页书</td>
+                        <td>无</td>
+                </tr>
+                <tr>
+			<td>每日目标</td>
+			<td>Meeting</td>
+			<td>Working</td>
+                        <td>Learning</td>
+                        <td>看10页书</td>
+                        <td>无</td>
+		</tr>
+		<tr>
+			<td>备注</td>
+			<td>Meeting</td>
+			<td>Working</td>
+                        <td>Learning</td>
+                        <td>看10页书</td>
+                        <td>无</td>
+		</tr>
+	</tbody>
+</table>
 
 
-
-
-<!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
-</html>
+</html> 
+
